version/0.18/_sources/api/solver/_autosummary/settings/fluid_child.rst.txt
:orphan:

.. _fluid_child:

fluid_child
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.fluid_child.fluid_child
    :show-inheritance:

.. rubric:: Attributes

======================================================================================   ===================================================

Attribute                                                                                                                            Summary

======================================================================================   ===================================================
:ref:`name <name_1>`                                                                                                           'name' child.

:ref:`chemical_formula <chemical_formula>`                                                   Specify the chemical formula for the substance.

:ref:`density <density>`                                                                                                    'density' child.

:ref:`viscosity <viscosity>`                                                                                              'viscosity' child.

:ref:`specific_heat <specific_heat>`                                                                                  'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity>`                                                             'thermal_conductivity' child.

:ref:`molecular_weight <molecular_weight>`                                                                         'molecular_weight' child.

:ref:`premix_laminar_speed <premix_laminar_speed>`                                                             'premix_laminar_speed' child.

:ref:`premix_critical_strain <premix_critical_strain>`                                                       'premix_critical_strain' child.

:ref:`premix_unburnt_temp <premix_unburnt_temp>`                                                                'premix_unburnt_temp' child.

:ref:`premix_unburnt_density <premix_unburnt_density>`                                                       'premix_unburnt_density' child.

:ref:`premix_heat_trans_coeff <premix_heat_trans_coeff>`                                                    'premix_heat_trans_coeff' child.

:ref:`premix_heat_of_comb <premix_heat_of_comb>`                                                                'premix_heat_of_comb' child.

:ref:`premix_unburnt_fuel_mf <premix_unburnt_fuel_mf>`                                                       'premix_unburnt_fuel_mf' child.

:ref:`premix_adiabatic_temp <premix_adiabatic_temp>`                                                          'premix_adiabatic_temp' child.

:ref:`therm_exp_coeff <therm_exp_coeff>`                                                                            'therm_exp_coeff' child.

:ref:`characteristic_vibrational_temperature <characteristic_vibrational_temperature>`       'characteristic_vibrational_temperature' child.

:ref:`absorption_coefficient <absorption_coefficient>`                                                       'absorption_coefficient' child.

:ref:`melting_heat <melting_heat>`                                                                                     'melting_heat' child.

:ref:`tsolidus <tsolidus>`                                                                                                 'tsolidus' child.

:ref:`tliqidus <tliqidus>`                                                                                                 'tliqidus' child.

:ref:`liquidus_slope <liquidus_slope>`                                                                               'liquidus_slope' child.

:ref:`partition_coeff <partition_coeff>`                                                                            'partition_coeff' child.

:ref:`eutectic_mf <eutectic_mf>`                                                                                        'eutectic_mf' child.

:ref:`solid_diffusion <solid_diffusion>`                                                                            'solid_diffusion' child.

:ref:`solut_exp_coeff <solut_exp_coeff>`                                                                            'solut_exp_coeff' child.

:ref:`scattering_coefficient <scattering_coefficient>`                                                       'scattering_coefficient' child.

:ref:`scattering_phase_function <scattering_phase_function>`                                              'scattering_phase_function' child.

:ref:`refractive_index <refractive_index>`                                                                         'refractive_index' child.

:ref:`formation_entropy <formation_entropy>`                                                                      'formation_entropy' child.

:ref:`formation_enthalpy <formation_enthalpy>`                                                                   'formation_enthalpy' child.

:ref:`reference_temperature <reference_temperature_1>`                                                        'reference_temperature' child.

:ref:`lennard_jones_length <lennard_jones_length>`                                                             'lennard_jones_length' child.

:ref:`lennard_jones_energy <lennard_jones_energy>`                                                             'lennard_jones_energy' child.

:ref:`thermal_accom_coefficient <thermal_accom_coefficient>`                                              'thermal_accom_coefficient' child.

:ref:`velocity_accom_coefficient <velocity_accom_coefficient>`                                           'velocity_accom_coefficient' child.

:ref:`degrees_of_freedom <degrees_of_freedom>`                                                                   'degrees_of_freedom' child.

:ref:`uds_diffusivity <uds_diffusivity>`                                                                            'uds_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                                                          'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`                                           'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                                                'lithium_diffusivity' child.

:ref:`magnetic_permeability <magnetic_permeability>`                                                          'magnetic_permeability' child.

:ref:`speed_of_sound <speed_of_sound>`                                                                               'speed_of_sound' child.

:ref:`critical_temperature <critical_temperature>`                                                             'critical_temperature' child.

:ref:`critical_pressure <critical_pressure>`                                                                      'critical_pressure' child.

:ref:`critical_volume <critical_volume>`                                                                            'critical_volume' child.

:ref:`acentric_factor <acentric_factor>`                                                                            'acentric_factor' child.

:ref:`latent_heat <latent_heat>`                                                                                        'latent_heat' child.

:ref:`saturation_pressure <saturation_pressure>`                                                                'saturation_pressure' child.

:ref:`vaporization_temperature <vaporization_temperature>`                                                 'vaporization_temperature' child.

:ref:`charge <charge>`                                                                                                       'charge' child.

======================================================================================   ===================================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`fluid <fluid>`                                              'fluid' child.

:ref:`volumetric_species <volumetric_species>`       'volumetric_species' child.

==============================================   ===============================

